--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,13 +51,14 @@ p {
 }
 
 .hero {
+    margin-bottom: 25px;
+}
+
+.hero img {
     height: 800px;
     width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
+    object-fit: cover;
+  }
 
 .float-left {
     float: left;
